--- a/app/views/castings/index.html.erb
+++ b/app/views/castings/index.html.erb
@@ -17,7 +17,7 @@
 
       <% @castings.each do |casting| %>
       <tr>
-        <td><%= casting.actor_id %></td>
+        <td><%= casting.actor.name %></td>
         <td><%= casting.movie_id %></td>
         <td><%= casting.character %></td>
         <td>
