Only bookmark user can modify bookmark

--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -20,8 +20,11 @@
         <td><%= bookmark.user.email %></td>
         <td>
           <a href="/bookmarks/<%= bookmark.id %>" class="btn btn-primary">Show</a>
-          <a href="/bookmarks/<%= bookmark.id %>/edit" class="btn btn-warning">Edit</a>
-          <a href="/delete_bookmark/<%= bookmark.id %>" class="btn btn-danger" rel="nofollow">Delete</a>
+          
+          <% if current_user == bookmark.user %>
+            <a href="/bookmarks/<%= bookmark.id %>/edit" class="btn btn-warning">Edit</a>
+            <a href="/delete_bookmark/<%= bookmark.id %>" class="btn btn-danger" rel="nofollow">Delete</a>
+          <% end %>
         </td>
       </tr>
       <% end %>
