--- a/app/views/directors/show.html.erb
+++ b/app/views/directors/show.html.erb
@@ -54,6 +54,47 @@
           </div>
         </li>
       <% end %>
+
+      <li class="list-group-item">
+        <form action="/create_movie" method="post">
+      <!-- Hidden input for authenticity token to protect from forgery -->
+      <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+
+      <!-- Label and input for title -->
+      <div class="form-group">
+        <label for="title" class="control-label">
+          Title
+        </label>
+
+        <textarea id="title" name="title" placeholder="Title" class="form-control" rows="3"></textarea>
+      </div>
+
+      <!-- Label and input for year -->
+      <div class="form-group">
+        <label for="year" class="control-label">
+          Year
+        </label>
+
+        <input type="text" id="year" name="year" placeholder="Year" class="form-control" value="">
+      </div>
+
+      <!-- Label and input for description -->
+      <div class="form-group">
+        <label for="description" class="control-label">
+          Description
+        </label>
+
+        <textarea id="description" name="description" placeholder="Description" class="form-control" rows="3"></textarea>
+      </div>
+
+      <!-- Label and input for director_id -->
+      <input type="hidden" name="director_id" value="<%= @director.id %>">
+
+      <button class="btn btn-block btn-success">
+        Create Movie
+      </button>
+    </form>
+      </li>
     </ul>
   </div>
 </div>
